# social-network

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  postman_collection.json  pyproject.toml
devops/: Dockerfile  common-services.yml  postman_collection.json
devops/glitchtip/: docker-compose.yaml
devops/jmeter/: docker-compose.yaml
devops/jmeter/grafana-provisioning/dashboards/: jmeter-dashboard.json
devops/jmeter/grafana-provisioning/datasources/: datasources.yml
devops/locust/: docker-compose.yaml
devops/locust/grafana-provisioning/dashboards/: dashboard.yml  locust-requests.json  locust-testruns.json
devops/locust/grafana-provisioning/datasources/: datasources.yml
devops/monitoring/: Dockerfile  timescale_schema.sql
devops/monitoring/grafana-provisioning/dashboards/: dashboard.yml  locust-dashboard.json  locust-scatter-plot.json  posrtgresql-overview.json  postgresql-exporter.json  rabbit.json  redis.json
devops/monitoring/grafana-provisioning/datasources/: datasources.yml
devops/social_network/: Dockerfile  docker-compose.patroni.yaml  docker-compose.yaml  postman_collection.json
devops/social_network/patroni/: entrypoint.sh  patroni.yml
devops/test_cache/: docker-compose.cache.yaml  docker-compose.no-cache.yaml
devops/test_cache/prometheus/: prometheus.yml
devops/test_in_memory_db/: docker-compose.no-udf.yaml  docker-compose.udf.yaml
devops/test_indexes/: docker-compose.yaml
devops/test_queues/: docker-compose.queues-disabled.yaml  docker-compose.queues-enabled.yaml
devops/test_queues/prometheus/: prometheus.yml
devops/test_queues/rabbitmq/: Dockerfile
devops/test_replication/: docker-compose.replication-disabled.yaml  docker-compose.replication-physical.yaml  docker-compose.replication-quorum.yaml
devops/test_replication/haproxy/: haproxy-replication-quorum.cfg
devops/test_replication/master_config/postgresql-data/: postgresql.conf
devops/test_replication/patroni/: entrypoint.sh
devops/test_replication/prometheus/: replication-disabled.yml  replication-physical.yml
devops/test_replication/slave_config/slave1-data/: postgresql.conf
devops/test_replication/slave_config/slave2-data/: postgresql.conf
devops/test_sharding/: docker-compose.no-sharding.yaml  docker-compose.sharding.yaml  init_master.sql  max_conns.sql
devops/tests_load_replication/: docker-compose.replication-quorum.yaml
devops/tests_load_replication/haproxy/: haproxy-replication-disabled.cfg  haproxy-replication-physical.cfg
devops/tests_load_replication/master_config/entrypoint-init/: 00-init.sql
devops/tests_load_replication/master_config/postgresql-data/: pg_hba.conf
devops/tests_load_replication/patroni/: patroni.yml
devops/tests_load_replication/prometheus/: replication-quorum.yml
src/bootstrap/: main.py  settings.py  uow.py
src/data_generator/: __init__.py  const.py  generator.py
src/social_network/: exceptions.py  main.py  settings.py
src/social_network/api/: app.py  auth.py  gunicorn_conf.py  requests.py  responses.py  services.py
src/social_network/api/dependencies/: __init__.py  auth.py  services.py  ws.py
src/social_network/api/models/: __init__.py  auth.py  chat.py  common.py  friend.py  post.py  registration.py  user.py
src/social_network/api/routes/: __init__.py  chat.py  docs.py  friend.py  login.py  post.py  user.py
src/social_network/api/schema_mappers/: __init__.py  chat.py  friend.py  post.py  user.py
src/social_network/archive/orm/: __init__.py  base_orm.py  user_orm.py
src/social_network/database/: exceptions.py  uow.py
src/social_network/database/migrations/: alembic.ini  env.py
src/social_network/database/models/: __init__.py  base.py  user.py
src/social_network/domain/: __init__.py  exceptions.py  user_domain.py
tests/domain/services/: conftest.py  test_auth.py  test_user.py
tests/load/: Social Network Plan.jmx  const.py  mixin.py  settings.py  shape.py
tests/load/replication/: README.md
tests/load/search_users_by_name_idx/: README.md  base.py  search.py
tests/load/test_cache/: README.md
tests/load/test_in_memory_db/: README.md
tests/load/test_indexes/: README.md
tests/load/test_queues/: README.md
tests/load/test_replication/: README.md
tests/load/test_sharding/: README.md
tests/unit/: conftest.py
(+102 files in other folders)
