[project]
name = "social-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "cryptography>=45.0.4",
    "fastapi[standard]>=0.115.14",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[project.scripts]
social-network = "social_network:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-deadfixtures>=2.2.1",
    "pytest-mock>=3.14.1",
    "pytest-pretty>=1.3.0",
    "pytest-random-order>=1.2.0",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.1",
]
