[project]
name = "social-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "cryptography>=45.0.4",
    "fastapi[standard]>=0.115.14",
    "greenlet>=3.2.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "sentry-sdk>=2.32.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "starlette>=0.46.2",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.deptry.per_rule_ignores]
DEP002 = ["asyncpg", "greenlet"]

[project.scripts]
social-network = "social_network.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-deadfixtures>=2.2.1",
    "pytest-mock>=3.14.1",
    "pytest-pretty>=1.3.0",
    "pytest-random-order>=1.2.0",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.1",
    "types-python-jose>=3.5.0.20250531",
]
